--- a/javascript/package.json
+++ b/javascript/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "docs": "./node_modules/.bin/jsdoc -c ./jsdoc.config.json",
+    "test": "jest",
     "typescript": "./node_modules/typescript/bin/tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^24.8.0",
     "jsdoc": "^3.6.2",
     "typescript": "^3.5.2"
   }
