--- a/javascript/tsconfig.json
+++ b/javascript/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "declaration": true,
-    "strict": true
+    "strict": true,
+    "lib": ["es2016"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
